--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
+a:hover {
+  text-decoration: none !important;
+}
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
