--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
@@ -14,8 +20,9 @@ a:hover {
   text-decoration: none !important;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+.sign-in-with-google {
+  margin: 15px 0;
+  font-weight: 600;
+  cursor: pointer;
 }
